--- a/WoWLauncher/App.config
+++ b/WoWLauncher/App.config
@@ -4,18 +4,27 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="WoWLauncher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WoWRetroLauncher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-    <applicationSettings>
-        <WoWLauncher.Properties.Settings>
+    <userSettings>
+        <WoWRetroLauncher.Properties.Settings>
             <setting name="NewsBackground" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="Skin" serializeAs="String">
                 <value>vanilla</value>
             </setting>
-        </WoWLauncher.Properties.Settings>
-    </applicationSettings>
+            <setting name="Path" serializeAs="String">
+                <value>C:\Program Files\World of Warcraft</value>
+            </setting>
+            <setting name="GameVersion" serializeAs="String">
+                <value />
+            </setting>
+        </WoWRetroLauncher.Properties.Settings>
+    </userSettings>
 </configuration>
