* Cleaned up code and files * Fixed game version not saving

--- a/WoWLauncher/App.config
+++ b/WoWLauncher/App.config
@@ -23,7 +23,7 @@
                 <value>C:\Program Files\World of Warcraft</value>
             </setting>
             <setting name="GameVersion" serializeAs="String">
-                <value />
+                <value>Classic</value>
             </setting>
         </WoWRetroLauncher.Properties.Settings>
     </userSettings>
